# pooling_eval

./: .gitignore  .task  CLAUDE.md  README.md  Snakefile  analyze_variance_ratios.ipynb  calibrate_noise.py  code_versions.yaml  launch_dashboard.sh  launch_episode_sweeps.py  launch_sweep.sh  main.py  pyproject.toml  run_experiment.sh  run_parallel_estimators.sh  sync_wandb_runs.py
configs/: config_ant.yaml  config_cartpole.yaml  config_halfcheetah.yaml  config_hopper.yaml  config_humanoid.yaml  config_pong.yaml  config_walker2d.yaml  example_config.yaml  example_custom_paths.yaml  sweep_dqn.yaml  sweep_monte_carlo.yaml  sweep_td_lambda.yaml
configs/ant/: config.yaml  dqn.yaml  least_squares_mc.yaml  least_squares_mc_rbf.yaml  least_squares_td.yaml  least_squares_td_rbf.yaml  monte_carlo.yaml  nnls_mc.yaml  nnls_td.yaml  td.yaml
configs/cartpole/: config.yaml  dqn.yaml  least_squares_mc.yaml  least_squares_mc_rbf.yaml  least_squares_td.yaml  least_squares_td_rbf.yaml  monte_carlo.yaml  nnls_mc.yaml  nnls_td.yaml  td.yaml
configs/halfcheetah/: config.yaml  dqn.yaml  least_squares_mc.yaml  least_squares_mc_rbf.yaml  least_squares_td.yaml  least_squares_td_rbf.yaml  monte_carlo.yaml  td.yaml  (+2 more)
notebooks/: explore_results.ipynb
src/: __init__.py  app.py  config.py  data_preprocessing.py  debug_file_tracking.py  env_utils.py  estimate_storage.py  evaluate.py  generate_data.py  generate_eval_data.py  policy_gradient.py  policy_representations.py  registry.py  run_all_estimators.py  select_hyperparameters.py  train_estimator.py  train_policy.py  tune_hyperparameters.py
(+117 files in other folders)
